# Fundamentals-of-Development-in-CPlusPlus

./: .gitignore  README.md
2. Yellow Belt/1. Integer types, tuples, template functions/01_matrix_sum/: CMakeLists.txt  main.cpp
2. Yellow Belt/1. Integer types, tuples, template functions/02_average_temperature-2/: CMakeLists.txt  main.cpp
2. Yellow Belt/1. Integer types, tuples, template functions/03_mass_of_blocks/: CMakeLists.txt  main.cpp
2. Yellow Belt/1. Integer types, tuples, template functions/04_database_of_regions/: CMakeLists.txt  main.cpp
2. Yellow Belt/1. Integer types, tuples, template functions/05_task_tracker/: CMakeLists.txt  main.cpp
2. Yellow Belt/1. Integer types, tuples, template functions/06_everything_squared/: CMakeLists.txt  main.cpp
2. Yellow Belt/1. Integer types, tuples, template functions/07_reference_to_the_element/: CMakeLists.txt  main.cpp
2. Yellow Belt/2. Testing and debugging/01_decomposition_of_a_program/: CMakeLists.txt  main.cpp
2. Yellow Belt/2. Testing and debugging/02_unit_test_framework_code/: CMakeLists.txt  test_runner.h
2. Yellow Belt/2. Testing and debugging/03_tests_for_the_GetDistinctRealRootCount_function/: CMakeLists.txt  main.cpp
2. Yellow Belt/2. Testing and debugging/04_tests_for_the_Person_class/: CMakeLists.txt  main.cpp
2. Yellow Belt/2. Testing and debugging/05_tests_for_the_Rational_class/: CMakeLists.txt
2. Yellow Belt/2. Testing and debugging/06_tests_for_the_Rational_class/: CMakeLists.txt  main.cpp
2. Yellow Belt/2. Testing and debugging/07_tests_for_the_IsPalindrom_function/: CMakeLists.txt  main.cpp
2. Yellow Belt/3. Distributing code across files/01_sum_reverse_sort/: CMakeLists.txt  sum_reverse_sort.cpp
2. Yellow Belt/3. Distributing code across files/02_phone_number/: CMakeLists.txt  phone_number.cpp  phone_number.h
2. Yellow Belt/3. Distributing code across files/03_rectangle/: CMakeLists.txt  rectangle.cpp  rectangle.h
2. Yellow Belt/3. Distributing code across files/04_decomposition_of_a_program-2/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
2. Yellow Belt/4. Iterators, algorithms, and containers/01_vector_part/: CMakeLists.txt  main.cpp
2. Yellow Belt/4. Iterators, algorithms, and containers/02_subset/: CMakeLists.txt  main.cpp
2. Yellow Belt/4. Iterators, algorithms, and containers/03_split_into_words/: CMakeLists.txt  main.cpp
2. Yellow Belt/4. Iterators, algorithms, and containers/04_remove_duplicates/: CMakeLists.txt  main.cpp
2. Yellow Belt/4. Iterators, algorithms, and containers/05_enumeration_of_permutations/: CMakeLists.txt  main.cpp
2. Yellow Belt/4. Iterators, algorithms, and containers/06_demographic_indicators/: CMakeLists.txt  main.cpp
2. Yellow Belt/4. Iterators, algorithms, and containers/07_merge_sort/: CMakeLists.txt  main.cpp
2. Yellow Belt/4. Iterators, algorithms, and containers/08_merge_sort-2/: CMakeLists.txt  main.cpp
2. Yellow Belt/5. Inheritance and polymorphism/02_sending_notifications/: CMakeLists.txt  (+1 more)
5. Black Belt/2. Serialization and Protobuf/03_phone_book/: CMakeLists.txt  iterator_range.h  main.cpp  phone_book.cpp  phone_book.h
5. Black Belt/2. Serialization and Protobuf/04_yellow_pages/: CMakeLists.txt  main.cpp  merge.cpp  yellow_pages.h
5. Black Belt/3. Storing objects in memory and the virtual method table/03_interpreter_for_the_mython_language/: CMakeLists.txt  comparators.cpp  comparators.h  lexer.cpp  lexer.h  lexer_test.cpp  mython.cpp  object.cpp  object.h  object_holder.cpp  object_holder.h  object_holder_test.cpp  object_test.cpp  parse.cpp  parse.h  parse_test.cpp  statement.cpp  statement.h  statement_test.cpp  test_runner.h
5. Black Belt/5. Continuation of the final project/01_transport_guide_part_o/: CMakeLists.txt  input.json  json.h  main.cpp  output.json  transport_catalog.proto  types.h
5. Black Belt/5. Continuation of the final project/02_transport_guide_part_p/: CMakeLists.txt  graph.h  main.cpp  output.json  query.h  transport_catalog.proto
5. Black Belt/5. Continuation of the final project/03_transport_guide_part_q/: CMakeLists.txt  graph.h  json.cpp  json.h  layers.h  main.cpp  map_database.cpp  map_database.h  navigation_database.cpp  navigation_database.h  points_computer.cpp  points_computer.h  request_parser.h  route_map.cpp  route_map.h  router.h  routes_database.cpp  routes_database.h  stops_builder.cpp  stops_builder.h  stops_database.cpp  stops_database.h  svg.cpp  svg.h  transport_catalog.proto  transport_guide_manager.cpp  transport_guide_manager.h  yellow_pages_database.h
5. Black Belt/5. Continuation of the final project/05_transport_guide_part_s/: CMakeLists.txt  companies_index.cpp  companies_index.h  company.cpp  company.h  company_query.h  descriptions.h  graph.h  json.h  main.cpp  map.h  map_renderer.cpp  map_renderer.h  numeric.cpp  range.h  requests.cpp  requests.h  router.h  rubric.cpp  svg.cpp  svg.h  svg_serialize.h  transport_catalog.cpp  transport_catalog.h  transport_router.cpp  transport_router.h
5. Black Belt/5. Continuation of the final project/05_transport_guide_part_s/transport_catalog_proto/: company.proto  map_renderer.proto  transport_router.proto
5. Black Belt/5. Continuation of the final project/06_transport_guide_part_t/: CMakeLists.txt  data_manager.cpp  data_manager.h  db_item_name_id_map.h  distance.cpp  distance.h  graph.h  interval_map.h  json.cpp  json.h  main.cpp  ranges.h  render_manager.cpp  render_manager.h  requests.cpp  requests.h  responses.cpp  responses.h  route_manager.cpp  route_manager.h  router.h  svg.cpp  svg.h  xml.cpp  xml.h  yellow_pages_manager.cpp  yellow_pages_manager.h
5. Black Belt/5. Continuation of the final project/06_transport_guide_part_t/proto/name_id_map/: db_item_id_name_map.proto
5. Black Belt/5. Continuation of the final project/06_transport_guide_part_t/proto/transport/: transport_catalog.proto  transport_render.proto  transport_router.proto
5. Black Belt/5. Continuation of the final project/06_transport_guide_part_t/proto/yellow_pages/: company.proto
(+344 files in other folders)
